--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Testing HTML Again</title>
 </head>
 <body>
@@ -12,17 +13,25 @@
         Blanditiis magnam ex exercitationem quas placeat doloremque obcaecati eum eligendi nam molestiae reiciendis, 
         nulla assumenda deserunt maxime a commodi nihil consequatur eveniet!</p>
 
-    <ul>
-        <li>One</li>
-        <li>Two</li>
-        <li>Three</li>
-    </ul>
+    <div class="one">
+        <ul>
+            <li>One</li>
+            <li>Two</li>
+            <li>Three</li>
+        </ul>
+    </div>
 
-    <ol>
-        <li>One Again</li>
-        <li>Two Again</li>
-        <li>Three Again</li>
-    </ol>
+    <div class="two">
+        <ol>
+            <li>One Again</li>
+            <li>Two Again</li>
+            <li>Three Again</li>
+        </ol>
+    </div>
+
+    <div class="three">Style me via the external method!</div>
+    <p>I would like to be styled with the internal method, please.</p>
+    <button>Inline Method</button>
 
     <a href="https://www.theodinproject.com/about">click me</a> <br>
 
