--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,23 @@
     <title>Testing HTML Again</title>
 </head>
 <body>
+    <div class="header">
+        <div class="left-links">
+          <ul>
+            <li><a href="#">ONE</a></li>
+            <li><a href="#">TWO</a></li>
+            <li><a href="#">THREE</a></li>
+          </ul>
+        </div>
+        <div class="logo">LOGO</div>
+        <div class="right-links">
+          <ul>
+            <li><a href="#">FOUR</a></li>
+            <li><a href="#">FIVE</a></li>
+            <li><a href="#">SIX</a></li>
+          </ul>
+        </div>
+      </div>
     <h1>Hello World</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
         Blanditiis magnam ex exercitationem quas placeat doloremque obcaecati eum eligendi nam molestiae reiciendis, 
@@ -35,7 +52,9 @@
 
     <a href="https://www.theodinproject.com/about">click me</a> <br>
 
-	<a href="pages/about.html">About</a> <br>
+	<div class="about">
+        <p class="box1">Creating a center Div with <a href="pages/about.html">About Page</a> <br></p>
+    </div>
 
 	<img src="images/dog.jpg" alt="A Dog">
 </body>
