--- a/Index.html
+++ b/Index.html
@@ -11,9 +11,9 @@
     <div class="header">
         <div class="left-links">
           <ul>
-            <li><a href="#">ONE</a></li>
-            <li><a href="#">TWO</a></li>
-            <li><a href="#">THREE</a></li>
+            <li><a href="./Pages/about.html">About</a></li>
+            <li><a href="./Pages/searchpage.html">Search</a></li>
+            <li><a href="./Pages/blog.html">Blog</a></li>
           </ul>
         </div>
         <div class="logo">LOGO</div>
